--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Portfolio</title>
+  <title>portfolio</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -62,7 +62,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <img src="img/cover_photo.png" style="float:left">
-            <br><h1>Portfolio</h1>
+            <br><h1>portfolio</h1>
             <br><br><br><br>
             <span class="subheading" style="text-align:left">M.S. Electrical Engineering 2021<br>B.S. Electrical Engineering 2021<br>B.S. Mathematics 2021<br></span>
           
@@ -211,7 +211,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; 2020</p>
+          <p class="copyright text-muted">Created with Bootstrap, Jekyll and GitHub Pages</p>
         </div>
       </div>
     </div>
