--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="posttext">
             I led the Navigation Team, which was responsible for developing the computing and sensor platform in hardware and software. We implemented an Inertial Measurement Unit, Barometer, and PWM board on a Raspberry Pi using Python.
                         <br><br>
-            <a href="https://github.com/stephend-csu/nsfdsp">code</a>
+            <a href="https://github.com/stephend-csu/ires">code</a>
             </div>
             <br>
           <div class = "photos">
@@ -173,7 +173,7 @@
           <div class="posttext">
           I developed algorithms in MATLAB for energy management of campus solar panels. The project won sponsorship from the Los Angeles Department of Water and Power.
                       <br><br>
-          <a href="https://github.com/stephend-csu/microgrids">code</a>
+          <a href="https://github.com/stephend-csu/microgrid">code</a>
           </div>
           <br>
           <div class = "photos">
