--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
               Upcoming poster
             </h3>
             <div class="posttext">
-              Within a machine learning study group, I am working on a project comparing state-of-the-art economic forecasting techniques in order to predict the future price of Bitcoin. 
-              I am comparing ARIMA, Recurrent Neural Networks with Long Short Term Memory, and Tranformers.
+              The field of finance, i.e. technical analysis traders or Renaissance Technologies, is beginning to implement machine learning techniques. High frequency traders take advantage of the Limit Order Book imbalance. This project implements a feed-forward neural network, also known as a multi-layer perceptron, using TensorFlow, to forecast the price of Bitcoin from intraday Limit Order Book data in the Coinbase Pro market. The Bitcoin market is highly volatile, which could potentially provide a larger opportunity for prediction than other financial data sources.
                         <br><br>
             <a href="https://colab.research.google.com/drive/1vf4nPov2YRlfEbEE_4m8dhb90ZFaYKXz?usp=sharing">notebook</a>
                           <br>
