--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                   <div id="wtext">
                     <br>
-                    <span class="subheading">M.S. Electrical Engineering 2021<br>B.S. Electrical Engineering 2021<br>B.S. Mathematics 2021
+                    <span class="subheading">M.S. Electrical Engineering 2021<br>B.S. Mathematics, Electrical Engineering
                       <br><br>
                     <a href="https://github.com/stephend-csu">GitHub</a>, 
                     <a href="https://bit.ly/2OjVr3e">LinkedIn</a></span>
