--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/stephend-csu">
+              <a href="https://github.com/covariant">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
