--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<meta name="robots" content="noindex">
+<head>
+  <meta name="robots" content="noindex">
+</head>
+  
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 
 # Stephen Doeve
@@ -71,5 +76,4 @@ ___
 
 
 
-
-
+</html>
