--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 
 # Stephen Doeve
-<sdoeve@calstatela.edu> | [Github](https://github.com/covariant) | [LinkedIn](https://bit.ly/2OjVr3e) | [portfolio](/portfolio.html) | [resume.pdf](/pdf/Resume.pdf) | uno.sol
+<sdoeve@calstatela.edu> | [GitHub](https://github.com/covariant) | [LinkedIn](https://bit.ly/2OjVr3e) | [portfolio](/portfolio.html) | [resume.pdf](/pdf/Resume.pdf) | uno.sol
 ___
 
 ## Education
